started controllers for movies votes and users

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,6 +6,7 @@
   = javascript_include_tag "home"
 
 #container
+  -#= link_to "login", "#", id: "login"
   #mainContent
     %ol#selections
       %li#vote1
