--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,4 +17,21 @@
 
 		= csrf_meta_tag
 	%body
+		#fb-root
+		:javascript
+			window.fbAsyncInit = function() {
+				FB.init({
+					appId      : '248504555218072', // App ID
+					channelUrl : '/channel.php', // Channel File
+					status     : true, // check login status
+					cookie     : true, // enable cookies to allow the server to access the session
+					xfbml      : true  // parse XFBML
+				});
+			};
+			(function(d){
+				var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
+				js = d.createElement('script'); js.id = id; js.async = true;
+				js.src = "//connect.facebook.net/en_US/all.js";
+				d.getElementsByTagName('head')[0].appendChild(js);
+			}(document));
 		= content_for?(:content) ? yield(:content) : yield
