--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -1,79 +1,151 @@
 #container
-	font-family: Georgia, "Times New Roman", serif
-	font-size: 12px
-	line-height: 14px
-	color: #666666
+  font-family: Georgia, "Times New Roman", serif
+  font-size: 12px
+  line-height: 14px
+  color: #666666
 a
-	color: #888
-	text-decoration: underline
-	&:hover
-		color: #000
+  color: #888
+  text-decoration: underline
+  &:hover
+    color: #000
 p
-	margin-bottom: 10px
+  margin-bottom: 10px
 h1
-	font-size: 30px
-	color: #000
+  font-size: 30px
+  color: #000
 h2
-	color: #333
-	font-style: italic
-	font-size: 20px
-	line-height: 20px
-	margin-bottom: 10px
+  color: #333
+  font-style: italic
+  font-size: 20px
+  line-height: 20px
+  margin-bottom: 10px
 
 .pedestal
-	width: 120px
-	height: 178px
-	background-color: #bbb
-	text-align: center
-	
+  width: 120px
+  height: 178px
+  background-color: #bbb
+  text-align: center
+
 .movie
-	padding: 10px
+  padding: 10px
 
 #mainContent
-	width: 980px
-	margin: 0px auto
-	#selections
-		height: 178px
-		margin: 20px 0px 0px 20px
-		li
-			width: 280px
-			height: 178px
-			padding: 10px
-			background-color: #eeeeee
-			margin: 0px 20px 20px 0px
-			position: relative
-			float: left
-			.pedestal
-				float: left
-				margin-right: 10px
-			.movie
-				position: absolute
-				z-index: 10
-				top: 0px
-				left: 0px
-				width: 280px
-				.pedestal
-					float: left
-				p
-					padding-top: 30px
-	#choices
-		margin: 20px 0px 0px 20px
-		overflow: auto
-		width: 100%
-		.movie
-			width: 120px
-			height: 212px
-			background-color: #eeeeee
-			margin: 0px 20px 20px 0px
-			float: left
-			.pedestal
-				margin-bottom: 10px
-	#selections
-		li
-			&.state-highlight
-				background-color: #ffeeaa
-			&.state-hover
-				background-color: #333
-				color: #fff
-				h2
-					color: #fff
+  width: 980px
+  margin: 0px auto
+  #header
+    height: 60px
+    margin: 0px 20px
+    h1
+      line-height: 60px
+  #nav
+    display: none
+    height: 40px
+    margin: 0px 20px
+  #login
+    margin: 0px 20px
+    height: 40px
+    #fb-login
+      width: 71px
+      height: 22px
+      display: block
+      text-indent: -9999em
+      background: image_url("login.png")
+      float: left
+      margin-right: 10px
+    p
+      line-height: 22px
+  #results
+    display: none
+    width: 940px
+    height: 333px
+    margin: 20px
+    .graph
+      font-size: 10px
+      
+      .y-axis
+        font-family: Arial, Helvetica, sans-serif
+        width: 40px
+        height: 333px
+        float: left
+        .notch
+          border-bottom: 1px solid #999
+          height: 25px
+          line-height: 35px
+          text-align: right
+          padding-right: 3px
+        .sub-notch
+          border-bottom: 1px solid #ccc
+          margin-left: 20px
+          height: 25px
+      .item
+        width: 120px
+        float: left
+        &.alt
+        .bar
+          height: 233px
+          position: relative
+          .value
+            height: 150px
+            width: 100px
+            background-color: #555
+            position: absolute
+            right: 0px
+            bottom: 0px
+        .info
+          height: 100px
+          padding: 10px
+          .pedestal
+            width: 25px
+            height: 50px
+            float: left
+            margin-right: 10px
+  #selector
+    position: relative
+    #selections
+      display: none
+      height: 178px
+      margin: 0px 0px 0px 20px
+      li
+        width: 280px
+        height: 178px
+        padding: 10px
+        background-color: #eeeeee
+        margin: 0px 20px 20px 0px
+        position: relative
+        float: left
+        .pedestal
+          float: left
+          margin-right: 10px
+        .movie
+          position: absolute
+          z-index: 10
+          top: 0px
+          left: 0px
+          width: 280px
+          .pedestal
+            float: left
+          p
+            padding-top: 30px
+    #choices
+      margin: 20px 0px 0px 20px
+      overflow: auto
+      width: 100%
+      .movie
+        width: 120px
+        height: 212px
+        background-color: #eeeeee
+        margin: 0px 20px 20px 0px
+        float: left
+        .pedestal
+          margin-bottom: 10px
+    #selections
+      li
+        &.state-highlight
+          background-color: #ffeeaa
+        &.state-hover
+          background-color: #333
+          color: #fff
+          h2
+            color: #fff
+#footer
+  display: none
