--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
 
     %noscript
       .noscriptmsg
-        Please be advised that your browser currently has JavaScript disabled. This site is designed to be used with JavaScript enabled. To ensure an optimal user experience, please enable JavaScript in your browser's settings, then
+        Your browser currently has JavaScript disabled. This site doesn't work without it so please enable JavaScript in your browser's settings, then
         = succeed "." do
           = link_to "click here", "#{request.url}"
 
