--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,6 +26,7 @@
           cookie     : true, // enable cookies to allow the server to access the session
           xfbml      : true  // parse XFBML
         });
+        checkLogin();
       };
       (function(d){
         var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
