--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,15 @@
     %title Vote
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
-    = yield :scripts
+    :javascript
+      var _gaq = _gaq || [];
+       _gaq.push(['_setAccount', 'UA-28270060-1']);
+       _gaq.push(['_trackPageview']);
+       (function() {
+         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+       })();
 
     %noscript
       .noscriptmsg
