started detail view

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -1,3 +1,23 @@
+#moviedetailbg
+  position: absolute
+  z-index: 999
+  width: 100%
+  .content
+    background-color: #fff
+    margin: 0px auto
+    height: 900px
+    width: 980px
+    opacity: 0.7
+#moviedetail
+  position: absolute
+  z-index: 1000
+  width: 100%
+  .content
+    border: 10px solid #ddd
+    width: 600px
+    height: 400px
+    margin: 102px auto
+    background-color: #fff
 #container
   font-family: Georgia, "Times New Roman", serif
   font-size: 12px
