--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,8 @@
+#moviedetailbg
+  .content
+#moviedetail
+  .content
+  
 #container
   #mainContent
     #header
@@ -36,8 +41,8 @@
           = link_to "Refresh Results", "#", id: "results-refresh"
         %li.custom
           = link_to "View Only Watch-A-Thon Results", "#", id: "custom-results-toggle"
-        %li
-          = link_to "Post My Pick to Facebook", "#", id: "post-story"
+        %li.post
+          = link_to "Post My Top Pick to Facebook", "#", id: "post-story"
     #results
       .graph
         .y-axis
