Finished detail view

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,9 @@
   .content
 #moviedetail
   .content
-  
+    = link_to "X", "#", id: "detail-close"
+    #detail-template
+
 #container
   #mainContent
     #header
