--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -1,4 +1,5 @@
 #moviedetailbg
+  display: none
   position: absolute
   z-index: 999
   width: 100%
@@ -9,15 +10,59 @@
     width: 980px
     opacity: 0.7
 #moviedetail
+  display: none
   position: absolute
   z-index: 1000
   width: 100%
   .content
+    position: relative
     border: 10px solid #ddd
-    width: 600px
-    height: 400px
+    padding: 10px
+    width: 580px
+    height: 330px
     margin: 102px auto
     background-color: #fff
+    #detail-close
+      position: absolute
+      top: -10px
+      left: 600px
+      display: block
+      width: 35px
+      height: 30px
+      line-height: 30px
+      text-align: center
+      background-color: #ddd
+      color: #333
+      font-family: Arial
+      text-decoration: none
+      font-size: 20px
+      font-weight: bold
+      &:hover
+        background-color: #333
+        color: #ddd
+    .image
+      float: left
+      margin-right: 10px
+    h3
+      font-size: 24px
+      font-style: italic
+      font-weight: bold
+      margin-bottom: 10px
+    a
+      color: #333
+      margin-bottom: 10px
+    p
+      font-size: 14px
+      line-height: 16px
+      color: #666
+      strong
+        color: #333
+        font-weight: bold
+      &.synopsis
+        position: absolute
+        width: 580px
+        top: 200px
+        left: 10px
 #container
   font-family: Georgia, "Times New Roman", serif
   font-size: 12px
@@ -45,6 +90,16 @@ h2
   height: 178px
   background-color: #bbb
   text-align: center
+  position: relative
+  .more-info
+    position: absolute
+    top: 0px
+    right: 0px
+    display: block
+    text-indent: -9999em
+    height: 24px
+    width: 24px
+    background: image_url("info.png")
 
 .movie
   padding: 10px
