testing fb image retrieval, added medium sized images

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -227,6 +227,55 @@ h2
             left: 10px
             margin-bottom: 0px
             color: #888
+  #friend-nav
+    display: none
+    height: 54px
+    margin: 0px 20px
+    position: relative
+    ul
+      li
+        float: left
+        background-color: #555
+        height: 24px
+        padding: 0px 8px
+        margin-right: 10px
+        a
+          line-height: 24px
+          color: #fff
+          text-decoration: none
+          &:hover
+            text-decoration: underline
+  #friend-results
+    display: none
+    margin: 10px 20px 80px 20px
+    position: relative
+    ul
+      height: 50px
+      li
+        margin-top: 10px
+        float: left
+        width: 200px
+        margin-right: 20px
+        .user-image
+          height: 50px
+          width: 50px
+          background-color: #ccc
+          margin-right: 10px
+          float: left
+        .number
+          font-size: 35px
+          font-style: italic
+          float: left
+          width: 50px
+          height: 50px
+          line-height: 25px
+        .image
+          height: 50px
+          width: 34px
+          background-color: #ccc
+          margin-right: 10px
+          float: left
+  
   #selector
     position: relative
     padding-bottom: 20px
@@ -280,4 +329,5 @@ h2
           h2
             color: #fff
   #footer
+    clear: both
     margin: 0px 20px
