--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -62,6 +62,14 @@
           .sub-notch
           .notch
             0%
+    #friend-nav
+      %h2
+        Your Friends
+      %ul
+        %li
+          = link_to "See How Your Friends Voted", "#", id: "friends-refresh"
+    #friend-results
+
     #footer
       %p
         This website has no affiliations with The Academy of Motion Picture Arts and Sciences or any other organization. It's just a fun way to see which movies a random sampling of people enjoyed the most this year. Votes on this site have no meaning and do not affect the outcome of the Academy Awards in any way. If you login with your Facebook account on this site we will save your name and your choices after you vote. Developed by
