--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -197,7 +197,6 @@ h2
       .item
         width: 100px
         float: left
-        &.alt
         .bar
           height: 233px
           position: relative
@@ -230,7 +229,7 @@ h2
   #friend-nav
     display: none
     height: 54px
-    margin: 0px 20px
+    margin: 0px 20px 20px 0px
     position: relative
     ul
       li
@@ -247,15 +246,16 @@ h2
             text-decoration: underline
   #friend-results
     display: none
-    margin: 10px 20px 80px 20px
+    margin: 0px 0px 40px 0px
     position: relative
     .friend
+      padding: 10px 0px 10px 10px
+      height: 50px
       &:nth-child(even)
         background: #ccc
       ul
         height: 50px
         li
-          padding: 10px 0px
           float: left
           width: 200px
           margin-right: 20px
