filtering for actual friends

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -228,10 +228,11 @@ h2
             color: #888
   #friend-nav
     display: none
-    height: 54px
-    margin: 0px 20px 20px 0px
+    margin: 0px 20px 20px 20px
     position: relative
     ul
+      height: 24px
+      margin-bottom: 20px
       li
         float: left
         background-color: #555
@@ -246,13 +247,13 @@ h2
             text-decoration: underline
   #friend-results
     display: none
-    margin: 0px 0px 40px 0px
+    margin: 0px 20px 40px 20px
     position: relative
     .friend
       padding: 10px 0px 10px 10px
       height: 50px
       &:nth-child(even)
-        background: #ccc
+        background: #ddd
       ul
         height: 50px
         li
@@ -333,4 +334,4 @@ h2
             color: #fff
   #footer
     clear: both
-    margin: 0px 20px
+    margin: 0px 20px 20px 20px
