added library for ipad drag

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -35,6 +35,7 @@
           %p.instructions
             drag your third favorite movie into this box, 1 point
       #choices
+        .clearer
     #nav
       %h2
         The Results
