--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -1,3 +1,5 @@
+.clearer
+  clear: both
 #moviedetailbg
   display: none
   position: absolute
@@ -103,7 +105,7 @@ h2
 
 .movie
   padding: 10px
-
+  cursor: move
 #mainContent
   width: 980px
   margin: 0px auto
@@ -116,6 +118,7 @@ h2
     height: 54px
     margin: 0px 20px
     position: relative
+    clear: both
     ul
       li
         float: left
@@ -285,7 +288,7 @@ h2
     padding-bottom: 20px
     #selections
       display: none
-      height: 178px
+      height: 198px
       margin: 0px 0px 0px 20px
       li
         width: 280px
@@ -310,8 +313,6 @@ h2
             padding-top: 30px
     #choices
       margin: 0px 0px 0px 20px
-      overflow: auto
-      width: 100%
       .movie
         width: 120px
         height: 217px
