adding save indicator

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -1,5 +1,23 @@
 .clearer
   clear: both
+#save
+  position: absolute
+  top: 60px
+  left: 890px
+  font-size: 14px
+  line-height: 22px
+  height: 22px
+  width: 70px
+  text-align: center
+  background-color: #ffb400
+  color: #000
+  display: none
+  &.success
+    background-color: #008b24
+    color: #fff
+  &.fail
+    background-color: #e41500
+    color: #fff
 #moviedetailbg
   display: none
   position: absolute
