--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,14 +9,15 @@
   #mainContent
     #header
       %h1
-        The Academy's Best Pictures of 2011
+        The Academy's Best Pictures of 2012
     #login
       = link_to "Login", "#", id: "fb-login"
       %p
-        Which of these nominees deserve to win Best Picture at the Oscars this year? Click on the Facebook log in button to vote for your favorites.
+        Pick the top 3 nominees you'd most like to watch. Click on the Facebook log in button to vote for your favorites.
     #subtitle
       %p
         Drag the movies around to make your selections.
+    #save
     #selector
       %ol#selections
         %li#vote1
