updated movies for 2014

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,7 +9,7 @@
   #mainContent
     #header
       %h1
-        The Academy's Best Pictures of 2012
+        The Oscars - Best Pictures Nominees - 2014
     #login
       = link_to "Login", "#", id: "fb-login"
       %p
