--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,7 +9,7 @@
   #mainContent
     #header
       %h1
-        The Oscars - Best Pictures Nominees - 2014
+        The Oscars - Best Picture Nominees - 2014
     #login
       = link_to "Login", "#", id: "fb-login"
       %p
