--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -1,3 +1,5 @@
+body
+  background: #ddd
 .clearer
   clear: both
 #save
@@ -97,7 +99,7 @@ p
   margin-bottom: 10px
 h1
   font-size: 30px
-  color: #000
+  color: #b7a261
 h2
   color: #333
   font-style: italic
@@ -224,7 +226,7 @@ h2
           position: relative
           .value
             width: 50px
-            background-color: #777
+            background-color: #b7a261
             position: absolute
             left: 25px
             bottom: 0px
@@ -268,7 +270,7 @@ h2
           &:hover
             text-decoration: underline
   #friend-results
-    display: none
+    display: none !important
     margin: 0px 20px 40px 20px
     position: relative
     .friend
@@ -313,10 +315,12 @@ h2
         width: 280px
         height: 178px
         padding: 10px
-        background-color: #eeeeee
+        background-color: #ffffff
         margin: 0px 20px 20px 0px
         position: relative
         float: left
+        border-radius: 5px
+        box-shadow: 2px 2px 5px rgba(0,0,0,.5)
         .pedestal
           float: left
           margin-right: 10px
@@ -335,9 +339,11 @@ h2
       .movie
         width: 120px
         height: 217px
-        background-color: #ddd
+        background-color: #fff
         margin: 0px 20px 20px 0px
         float: left
+        border-radius: 5px
+        box-shadow: 2px 2px 5px rgba(0,0,0,.5)
         .pedestal
           margin-bottom: 10px
         p
